--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,8 @@
   "author": "Team Sabracare",
   "license": "ISC",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "description": ""
 }
